# musicboxd

./: .gitignore  CMakeLists.txt  README.md  index.html
docs/: uml.md
src/: main.cpp
src/models/: Artista.cpp  Artista.h  Avaliacao.cpp  Avaliacao.h  AvaliacaoComDestaque.cpp  AvaliacaoComDestaque.h  Lista.cpp  Lista.h  Musica.cpp  Musica.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h
